<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>acg_admittance_controller</name>
  <version>0.0.0</version>
  <description>Implementation of an admittance controller</description>
  <author email="f.donofrio10@studenti.unisa.it">Francesco D'Onofrio</author>
  <author email="lpagliara0@unisa.it">Lorenzo Pagliara</author>
  <maintainer email="eferrentino@unisa.it">Enrico Ferrentino</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>acg_common_libraries</depend>
  <depend>acg_control_msgs</depend>
  <depend>filters</depend>
  <depend>geometry_msgs</depend>
  <depend>motion_based_interaction_controller</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>realtime_tools</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>

  <exec_depend>admittance_filter</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
