<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>acg_controller_interface</name>
  <version>0.1.0</version>
  <description>This package expands the functionalities contained in the official ROS2 controller_interface package, by implementing custom semantic components and semantic command components</description>
  <author email="drisi@unisa.it">Davide Risi</author>
  <maintainer email="eferrentino@unisa.it">Enrico Ferrentino</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
