<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>acg_hardware_interface_facade</name>
  <version>0.1.0</version>
  <description>This package provides classes for interacting with hardware interfaces.</description>
  <author email="drisi@unisa.it">Davide Risi</author>
  <maintainer email="eferrentino@unisa.it">Enrico Ferrentino</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>acg_control_msgs</depend>
  <depend>acg_controller_interface</depend>
  <depend>geometry_msgs</depend>
  <depend>hardware_interface</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
