<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>acg_resources_panda_moveit_config</name>
  <version>0.3.0</version>
  <description>The Panda configuration package used by the Automatic Control Group</description>
  <maintainer email="eferrentino@unisa.it">Enrico Ferrentino</maintainer>

  <license>BSD</license>

  <url type="bugtracker">https://bitbucket.org/unisa-acg/unisa_acg_ros2/issues</url>
  <url type="repository">https://bitbucket.org/unisa-acg/unisa_acg_ros2</url>

  <author email="eferrentino@unisa.it">Enrico Ferrentino</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>acg_resources_panda_description</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>gripper_controllers</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>moveit_planners</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>
  <exec_depend>moveit_ros_warehouse</exec_depend>
  <exec_depend>moveit_setup_assistant</exec_depend>
  <exec_depend>moveit_simple_controller_manager</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>rviz_common</exec_depend>
  <exec_depend>rviz_default_plugins</exec_depend>
  <exec_depend>rviz_visual_tools</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
