<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>acg_resources_ur10_moveit_config</name>
  <version>0.0.0</version>
  <description>The UR10 configuration package used by the Automatic Control Group</description>
  <author email="alangella@unisa.it">Antonio Langella</author>
  <author email="g.ricciardelli3@studenti.unisa.it">Gerardo Ricciardelli</author>
  <author email="a.coone@studenti.unisa.it">Alessio Coone</author>
  <author email="f.donofrio10@studenti.unisa.it">Francesco D'Onofrio</author>
  <maintainer email="eferrentino@unisa.it">Enrico Ferrentino</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>acg_control_msgs</exec_depend>
  <exec_depend>acg_resources_chalk_holder_description</exec_depend>
  <exec_depend>acg_resources_ft_sensor_gazebo_description</exec_depend>
  <exec_depend>acg_resources_generic_force_torque_sensor_description</exec_depend>
  <exec_depend>acg_resources_generic_mounting_description</exec_depend>
  <exec_depend>acg_resources_long_handle_description</exec_depend>
  <exec_depend>acg_resources_robotiq_ft150_description</exec_depend>
  <exec_depend>acg_resources_short_handle_description</exec_depend>
  <exec_depend>acg_resources_ur10_description</exec_depend>
  <exec_depend>end_effector_builder</exec_depend>
  <exec_depend>gazebo_force_torque_sensor</exec_depend>
  <exec_depend>kinematics_interface_kdl</exec_depend>
  <exec_depend>plotjuggler_ros</exec_depend>
  <exec_depend>reference_generator</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>task_space_mock_controller</exec_depend>
  <exec_depend>ur_moveit_config</exec_depend>
  <exec_depend>ur_robot_driver</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
