<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>panda_forward_kinematics_demo</name>
  <version>0.0.0</version>
  <description>Forward kinematics demo using the Panda robot</description>
  <author email="eferrentino@unisa.it">Enrico Ferrentino</author>
  <maintainer email="eferrentino@unisa.it">Enrico Ferrentino</maintainer>
  <license>BSD</license>

  <url type="bugtracker">https://bitbucket.org/unisa-acg/unisa_acg_ros2/issues</url>
  <url type="repository">https://bitbucket.org/unisa-acg/unisa_acg_ros2</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_ros_planning</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <exec_depend>acg_resources_panda_moveit_config</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
